OneMaster/smart-distribution-server/k8s-service.yml
apiVersion: v1
kind: Service
metadata:
  name: distribution
  namespace: distribution
  labels:
    app: distribution
spec:
  selector:
    app: distribution
  type: NodePort
  ports:
    - name: distribution-port
      port:  8080
      targetPort: 8080
      protocol: TCP
      nodePort: 30056    
    - name: iot-port
      nodePort: 30081
      port: 8081
      targetPort: 8081
